{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 52,
  "lineage": "de42615d-73b3-c621-e2bd-1df45feca4f3",
  "resources": [
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:614974528404:internet-gateway/igw-0211b549c6e5f36d6",
            "id": "igw-0211b549c6e5f36d6",
            "owner_id": "614974528404",
            "tags": {
              "Name": "kcvpc_igw"
            },
            "tags_all": {
              "Name": "kcvpc_igw"
            },
            "vpc_id": "vpc-00183adabc3e6e764"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:614974528404:route-table/rtb-09f49cd3b438aa5c8",
            "id": "rtb-09f49cd3b438aa5c8",
            "owner_id": "614974528404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b55508503b05a4df",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "private_route_table"
            },
            "tags_all": {
              "name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00183adabc3e6e764"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_elastic_ip.aws_eip.this",
            "module.public_nat_gw.aws_nat_gateway.this",
            "module.public_subnet.aws_subnet.this",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b007780b228e30b5",
            "route_table_id": "rtb-09f49cd3b438aa5c8",
            "subnet_id": "subnet-0be9011a0ea1b7e1b"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.this",
            "module.private_subnet.aws_subnet.this",
            "module.public_elastic_ip.aws_eip.this",
            "module.public_nat_gw.aws_nat_gateway.this",
            "module.public_subnet.aws_subnet.this",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:614974528404:subnet/subnet-0be9011a0ea1b7e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be9011a0ea1b7e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614974528404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnet"
            },
            "tags_all": {
              "name": "private_subnet"
            },
            "vpc_id": "vpc-00183adabc3e6e764"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f34a34ca2efac5d",
            "arn": "arn:aws:ec2:eu-west-1:614974528404:instance/i-0a298be593b0de202",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a298be593b0de202",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kcvpc-key-pair-14345314",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c16496cd1d1bcf83",
            "private_dns": "ip-10-0-1-69.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-022362fa3ad2cbf83",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04a1ae3136b50441f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05820a4b359532271",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a1ae3136b50441f"
            ]
          },
          "dependencies": [
            "module.public_ec2_instance.aws_key_pair.key_pair",
            "module.public_subnet.aws_subnet.this",
            "module.security_group.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0facc14584f2580",
            "arn": "arn:aws:ec2:eu-west-1:614974528404:elastic-ip/eipalloc-0e0facc14584f2580",
            "domain": "vpc",
            "id": "eipalloc-0e0facc14584f2580",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-49-227-90.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.227.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public_elastic_ip"
            },
            "tags_all": {
              "Name": "public_elastic_ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.public_nat_gw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0facc14584f2580",
            "association_id": "eipassoc-0485b2c1d17c06d02",
            "connectivity_type": "public",
            "id": "nat-0b55508503b05a4df",
            "network_interface_id": "eni-01f0abd817ed93379",
            "private_ip": "10.0.1.55",
            "public_ip": "52.49.227.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05820a4b359532271",
            "tags": {
              "Name": "public_nat_gw"
            },
            "tags_all": {
              "Name": "public_nat_gw"
            }
          },
          "dependencies": [
            "module.public_elastic_ip.aws_eip.this",
            "module.public_subnet.aws_subnet.this",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:614974528404:route-table/rtb-0ce91d89fdd3db953",
            "id": "rtb-0ce91d89fdd3db953",
            "owner_id": "614974528404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0211b549c6e5f36d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public_route_table"
            },
            "tags_all": {
              "name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00183adabc3e6e764"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9ffa9df8a0eb864",
            "route_table_id": "rtb-0ce91d89fdd3db953",
            "subnet_id": "subnet-05820a4b359532271"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.public_route_table.aws_route_table.this",
            "module.public_subnet.aws_subnet.this",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:614974528404:subnet/subnet-05820a4b359532271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05820a4b359532271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614974528404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnet"
            },
            "tags_all": {
              "name": "public_subnet"
            },
            "vpc_id": "vpc-00183adabc3e6e764"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:614974528404:security-group/sg-08de83f7d5aec501a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08de83f7d5aec501a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "PrivateSecurityGroup",
            "name_prefix": "",
            "owner_id": "614974528404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00183adabc3e6e764"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:614974528404:security-group/sg-04a1ae3136b50441f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a1ae3136b50441f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PublicSecurityGroup",
            "name_prefix": "",
            "owner_id": "614974528404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00183adabc3e6e764"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:614974528404:vpc/vpc-00183adabc3e6e764",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aae626dca8b2c484",
            "default_route_table_id": "rtb-0748c65ff0fa8b273",
            "default_security_group_id": "sg-031b82a3dc3008394",
            "dhcp_options_id": "dopt-0c1e0c35a8be97ccb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00183adabc3e6e764",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0748c65ff0fa8b273",
            "owner_id": "614974528404",
            "tags": {
              "Name": "KCVPC"
            },
            "tags_all": {
              "Name": "KCVPC"
            }
          }
        }
      ]
    }
  ]
}